# CryptoFlow

./: .env  .gitignore  Dockerfile  Dockerfile.django  README.md  crypto_24hr_rawingest.csv  crypto_24hr_rawingest_landing.csv  docker-compose.yml  example.txt  pyproject.toml
airflow_home/dags/: L1_ml_collect_daily_updates.py  L1_upbit_candle_daily.py  L1_upbit_ticker.py  L2_strategy_golden_cross_daily.py  L2_trend_scanner_daily.py  L2_upbit_stats_24h.py  L3_anomaly_baseline_daily.py  L3_ml_features_daily.py  bitcoin_price_dag.py  dag_01_build_upbit_datalake.py  dag_01_ml_backfill_daily_candles.py  dag_02_build_market_stats_24h_datamart.py  dag_02_build_market_stats_24hr_datamart.py  dag_02_ml_collect_daily_updates.py  dag_03_ml_build_datamart.py  feature_engineering_test_251020.ipynb  feature_engineering_v.10_251020.ipynb  ops_upbit_backfill_candles.py.py  upbit_api_data_lake_dag.py
airflow_home/logs/scheduler/: latest
airflow_setup/: Dockerfile  requirements.txt
crypto_flow_django/: db.sqlite3  manage.py
crypto_flow_django/bitcoin/: filters.py  models.py  serializers.py  services_cache.py  services_upbit.py  tasks.py  tests.py  views.py
crypto_flow_django/bitcoin/migrations/: 0001_initial.py  0002_market24hstat.py  0003_crypto24hrawingest.py  0004_crypto24hrawingestlanding_delete_crypto24hrawingest.py  0005_crypto24hrawingestevent.py
crypto_flow_django/django_setup/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
shared/: schemas.py
streaming/: config.py  consumer.py  main.py  producer.py
test/: test_rate_limit.py
