[project]
name = "cryptoflow"
version = "0.1.0"
description = "A real-time cryptocurrency price tracking and prediction system using Django, Kafka, and Airflow."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (==4.2.8)",
    "djangorestframework (==3.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
