[project]
name = "cryptoflow"
version = "0.1.0"
description = "A real-time cryptocurrency price tracking and prediction system using Django, Kafka, and Airflow."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11.13"

dependencies = [
    "django (==4.2.8)",
    "djangorestframework (==3.15.0)",
    "psycopg[binary] (==3.1.20)",
    "requests (==2.32.3)",
    "pydantic (>=2.7,<3)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "cryptography (>=46.0.2,<47.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "django-filter (>=24.2,<25.0)",
    "django-redis (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
